GridImpl and tests