@@ -1,7 +1,7 @@
 package sk.uniba.fmph.dcs.terra_futura.grid;
 
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.Before;
+import org.junit.Test;
 import sk.uniba.fmph.dcs.terra_futura.card.Card;
 import sk.uniba.fmph.dcs.terra_futura.card.CardImpl;
 import sk.uniba.fmph.dcs.terra_futura.effect.Effect;
@@ -9,9 +9,9 @@ import sk.uniba.fmph.dcs.terra_futura.enums.Resource;
 
 import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.Assert.*;
 
-class GridImplTest {
+public class GridImplTest {
 
     private GridImpl grid;
     private CardImpl cardA;
@@ -19,10 +19,11 @@ class GridImplTest {
     private GridPosition pos1;
     private GridPosition pos2;
 
-    @BeforeEach
-    void setUp() {
+    @Before
+    public void setUp() {
         grid = new GridImpl();
-        List<Resource> res = List.of(Resource.MONEY, Resource.GREEN);
+
+        List<Resource> res = Arrays.asList(Resource.MONEY, Resource.GREEN);
         Effect effect = new Effect() {
             @Override
             public boolean check(List<Resource> input, List<Resource> output, int pollution) {
@@ -39,20 +40,22 @@ class GridImplTest {
                 return "";
             }
         };
-        cardA = new CardImpl(res, 1, effect, effect );
+
+        cardA = new CardImpl(res, 1, effect, effect);
         cardB = new CardImpl(res, 1, effect, effect);
+
         pos1 = new GridPosition(1, 1);
         pos2 = new GridPosition(2, 2);
     }
 
-    // GetCard
+    // getCard
     @Test
-    void getCard_emptyGrid_returnsEmpty() {
-        assertTrue(grid.getCard(pos1).isEmpty());
+    public void getCard_emptyGrid_returnsEmpty() {
+        assertFalse(grid.getCard(pos1).isPresent());
     }
 
     @Test
-    void getCard_afterPut_returnsCard() {
+    public void getCard_afterPut_returnsCard() {
         grid.putCard(pos1, cardA);
         Optional<Card> found = grid.getCard(pos1);
 
@@ -60,88 +63,100 @@ class GridImplTest {
         assertSame(cardA, found.get());
     }
 
-    // PutCard
+    // canPutCard
     @Test
-    void canPutCard_emptyCell_returnsTrue() {
+    public void canPutCard_emptyCell_returnsTrue() {
         assertTrue(grid.canPutCard(pos1));
     }
 
     @Test
-    void canPutCard_occupiedCell_returnsFalse() {
+    public void canPutCard_occupiedCell_returnsFalse() {
         grid.putCard(pos1, cardA);
         assertFalse(grid.canPutCard(pos1));
     }
 
     // putCard
     @Test
-    void putCard_inEmptyCell_succeeds() {
+    public void putCard_inEmptyCell_succeeds() {
         grid.putCard(pos1, cardA);
         assertSame(cardA, grid.getCard(pos1).get());
     }
 
     @Test
-    void putCard_inOccupiedCell_throwsException() {
+    public void putCard_inOccupiedCell_throwsException() {
         grid.putCard(pos1, cardA);
-        assertThrows(IllegalStateException.class, () -> grid.putCard(pos1, cardB));
+
+        try {
+            grid.putCard(pos1, cardB);
+            fail("Expected IllegalStateException");
+        } catch (IllegalStateException e) {
+            // OK
+        }
     }
 
     // setActivationPattern
     @Test
-    void setActivationPattern_allowsActivationOfListedPositions() {
+    public void setActivationPattern_allowsActivationOfListedPositions() {
         grid.putCard(pos1, cardA);
-        grid.setActivationPattern(List.of(pos1));
+        grid.setActivationPattern(Arrays.asList(pos1));
 
         assertTrue(grid.canBeActivated(pos1));
     }
 
     @Test
-    void canBeActivated_returnsFalse_whenNoCard() {
-        grid.setActivationPattern(List.of(pos1));
+    public void canBeActivated_returnsFalse_whenNoCard() {
+        grid.setActivationPattern(Arrays.asList(pos1));
         assertFalse(grid.canBeActivated(pos1));
     }
 
     @Test
-    void canBeActivated_returnsFalse_whenNotInPattern() {
+    public void canBeActivated_returnsFalse_whenNotInPattern() {
         grid.putCard(pos1, cardA);
-        grid.setActivationPattern(List.of(pos2));
+        grid.setActivationPattern(Arrays.asList(pos2));
+
         assertFalse(grid.canBeActivated(pos1));
     }
 
-    //setActivated
+    // setActivated
     @Test
-    void setActivated_onValidPosition_succeeds() {
+    public void setActivated_onValidPosition_succeeds() {
         grid.putCard(pos1, cardA);
-        grid.setActivationPattern(List.of(pos1));
+        grid.setActivationPattern(Arrays.asList(pos1));
 
-        assertDoesNotThrow(() -> grid.setActivated(pos1));
+        grid.setActivated(pos1); // Must not throw
     }
 
     @Test
-    void setActivated_onInvalidPosition_throwsException() {
+    public void setActivated_onInvalidPosition_throwsException() {
         grid.putCard(pos1, cardA);
-        grid.setActivationPattern(List.of(pos2));
+        grid.setActivationPattern(Arrays.asList(pos2));
 
-        assertThrows(IllegalStateException.class, () -> grid.setActivated(pos1));
+        try {
+            grid.setActivated(pos1);
+            fail("Expected IllegalStateException");
+        } catch (IllegalStateException e) {
+            // OK
+        }
     }
 
-    //setActivationPattern(Collection<SimpleEntry<Integer,Integer>>)
+    // setActivationPattern with integer coordinates
     @Test
-    void setActivationPattern_integerCoordinates_convertedToPositions() {
+    public void setActivationPattern_integerCoordinates_convertedToPositions() {
         grid.putCard(pos1, cardA);
 
         Collection<AbstractMap.SimpleEntry<Integer, Integer>> raw =
-                List.of(new AbstractMap.SimpleEntry<>(1, 1));
+                Arrays.asList(new AbstractMap.SimpleEntry<>(1, 1));
 
         grid.setActivationPattern(raw);
 
         assertTrue(grid.canBeActivated(pos1));
     }
 
-    //endTurn
+    // endTurn
     @Test
-    void endTurn_clearsActivationData() {
+    public void endTurn_clearsActivationData() {
         grid.putCard(pos1, cardA);
-        grid.setActivationPattern(List.of(pos1));
+        grid.setActivationPattern(Arrays.asList(pos1));
         grid.setActivated(pos1);
 
         grid.endTurn();
@@ -149,9 +164,9 @@ class GridImplTest {
         assertFalse(grid.canBeActivated(pos1));
     }
 
-    //state
+    // state
     @Test
-    void state_containsCardStates() {
+    public void state_containsCardStates() {
         grid.putCard(pos1, cardA);
         String s = grid.state();
 
